# example_OnnxTensoort

./: .gitignore  CMakeLists.txt  sampleOnnxMNIST.cpp  sampleOnnxMNIST_inswap.cpp
